Fix text wrapping

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -128,8 +128,8 @@
     }
 
     .wrapper {
-      padding-left: 0.5em;
-      padding-right: 0.5em;
+      padding-left: 1em;
+      padding-right: 1em;
 
       @include breakpoint($x-large) {
         max-width: $x-large;
